improve the stream example